--- a/Prayers/Prayers/Views/PrayerView.xaml
+++ b/Prayers/Prayers/Views/PrayerView.xaml
@@ -10,6 +10,7 @@
     xmlns:progressBar="clr-namespace:Syncfusion.XForms.ProgressBar;assembly=Syncfusion.SfProgressBar.XForms"
     xmlns:sfButtons="clr-namespace:Syncfusion.XForms.Buttons;assembly=Syncfusion.Buttons.XForms"
     xmlns:syncEffectsView="clr-namespace:Syncfusion.XForms.EffectsView;assembly=Syncfusion.Core.XForms"
+    Title="{Binding PrayerMainTitle}"
     ios:Page.UseSafeArea="False">
     <ContentPage.Resources>
         <ResourceDictionary>
