--- a/Prayers/StJoseph/Prayers.StJoseph.UWP/App.xaml
+++ b/Prayers/StJoseph/Prayers.StJoseph.UWP/App.xaml
@@ -2,6 +2,4 @@
     x:Class="Prayers.UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Prayers.UWP">
-
-</Application>
+    xmlns:local="using:Prayers.UWP" />
